2007-05-23  Tyrel Datwyler <tyreld@us.ibm.com>

    * classProvider.c objectImpl.c objectImpl.h
    Fixed 1724753: qualifier creation support for classes

2007-05-23  Tyrel Datwyler <tyreld@us.ibm.com>

    * constClass.c
    Fixed 1724719: constClass leaks memory
    
2007-05-23  Sven Schuetz <sven@de.ibm.com>

	* indCIMXMLExport.c, fileRepository.c:
	Fixed 1724370: sfcb can run out of file handles

2007-05-11  Sven Schuetz <sven@de.ibm.com>

	* cimXmlGen.c:
	Fixed 1717262: sfcb might not properly return the hostname for some calls

2007-05-08  Sven Schuetz <sven@de.ibm.com>

	* cimXmlOps.y, cimXmlParser.c:
	Fixed 1663641: parser doesn't accept empty IPARAMVALUE

2007-05-04  Sven Schuetz <sven@de.ibm.com>

	* cimXmlOps.y, cimXmlParser.c, cimXmlRequest.c:
	Fixed 1712545: wrong results in association operations
	
	* cimXmlParser.c:
	Fixed 1712582: parser does not accept type attribute in KEYVALUE tag
	
2007-05-02  Sven Schuetz <sven@de.ibm.com>

	* queryStatement.c:
	Fixed 1711283: minor mem problem in qsRelease

2007-04-27  Adrian Schuur

	* support.c, support.h, providerRegister.c, providerRegister.h,
	providerDrv.c:
	New feature 1708578: Execution time parameters for providers

2007-04-27  Sven Schuetz <sven@de.ibm.com>

	* providerRegister.c, providerRegister.h:
	Fixed 1708568: providers for multiple classes are invoked only once

2007-04-26  Sven Schuetz <sven@de.ibm.com>

	* interopProvider.c:
	Fixed 1708071: interopProvider chokes on getinstance

2007-04-23  Sven Schuetz <sven@de.ibm.com>

	* interopProvider.c:
	Fixed 1702310: indProv segfaults while ci with NULL query

2007-04-17  Sven Schuetz <sven@de.ibm.com>

	* interopServerProvider.c:
	Fixed 1701174: Bug with ein on classes in interop namespace

2007-04-11  Sven Schuetz <sven@de.ibm.com>

	* providerMgr.c:
	Fixed 1697772: provider resolution can fail for associators

2007-04-05  Sven Schuetz <sven@de.ibm.com>

	* indCIMXMLExport.c, indCIMXMLHandler.c: